Changed background color.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background-color: aquamarine;
 }
 
 h1 {
@@ -10,6 +11,7 @@ h1 {
 
 p {
   text-align: center;
+  font-size: 24px;
 }
 
 .navigation-links {
