Adding SEO-friendly changes.
- Adding titles to links;
- Adding description to each page;
- Adding branding to the pages.

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,10 @@ p {
   font-size: 24px;
 }
 
+.croissant-photo {
+  max-width: 60%;
+}
+
 .navigation-links {
   display: flex;
   justify-content: space-evenly;
